--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,7 +1,7 @@
 $primary-text-color: #555555;
 $title-text-color: #101010;
 
-$primary-bcg-color: #ffffff;
+$primary-bcg-color: #ebebeb;
 
 $transition-duration: 250ms;
 $timing-function: cubic-bezier(0.4, 0, 0.2, 1);
