--- a/src/components/AppBar/AppBar.module.scss
+++ b/src/components/AppBar/AppBar.module.scss
@@ -1,12 +1,36 @@
-.nav {
-    &__link {
-        margin-right: 15px;
+@import '../../styles/variables.scss';
 
-        color: rgb(9, 32, 134);
+.nav {
+    margin-top: 10px;
+
+    &__link {
+        display: inline-block;
+
+        margin-right: 15px;
+        padding: 5px;
+
+        color: $primary-text-color;
+        font-weight: 500;
         text-decoration: none;
+
+        transition: transform $transition-duration $timing-function;
+
+        &:hover {
+            text-decoration: underline;
+            transform: scale($scale-value);
+        }
     }
 
-    &__link:hover {
-        text-decoration: underline;
+    &__link_activated {
+        color: $active-link-color;
+
+        border: 1px solid $active-link-color;
+        border-radius: $border-radius;
+
+        -webkit-box-shadow: $nav-shadow;
+        -moz-box-shadow: $nav-shadow;
+        box-shadow: $nav-shadow;
+
+        transform: scale($scale-value);
     }
 }
