--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,12 +1,13 @@
 $primary-text-color: #555555;
 $title-text-color: #101010;
 $active-link-color: #1963a0;
-
+$male-bcg-color-card: #4d88d4;
+$female-bcg-color-card: #e4729e;
 $primary-bcg-color: #ebebeb;
-
-$transition-duration: 250ms;
-$timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 $border-radius: 5px;
 $nav-shadow: 0px 5px 8px 0px rgba(34, 60, 80, 0.2);
 $scale-value: 1.1;
+
+$transition-duration: 250ms;
+$timing-function: cubic-bezier(0.4, 0, 0.2, 1);
