added users page

--- a/src/components/User/User.module.scss
+++ b/src/components/User/User.module.scss
@@ -1,4 +1,4 @@
-@import '../../styles/variables.scss';
+@import '../../assets/styles/variables.scss';
 
 .person {
     width: calc((100% - 6 * 30px) / 6);
@@ -11,6 +11,12 @@
 
     overflow: hidden;
     transition: transform $transition-duration $timing-function;
+
+    &__link {
+        color: inherit;
+
+        text-decoration: none;
+    }
 
     &__photo {
         display: block;
