--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -1,5 +1,10 @@
 @import './variables.scss';
 
+html {
+    overflow-x: hidden;
+    margin-right: calc(-1 * (100vw - 100%));
+}
+
 body {
     font-family: Roboto, sans-serif;
     letter-spacing: 0.03em;
