--- a/src/components/AppBar/AppBar.module.scss
+++ b/src/components/AppBar/AppBar.module.scss
@@ -1,7 +1,15 @@
 @import '../../assets/styles/variables.scss';
 
 .nav {
-    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 70px;
+    padding: 10px 20px;
+
+    background-color: #ffffff;
+    border-bottom-left-radius: $border-radius;
+    border-bottom-right-radius: $border-radius;
+    box-shadow: $nav-shadow;
 
     &__link {
         display: inline-block;
@@ -26,10 +34,6 @@
 
         border: 1px solid $active-link-color;
         border-radius: $border-radius;
-
-        -webkit-box-shadow: $nav-shadow;
-        -moz-box-shadow: $nav-shadow;
-        box-shadow: $nav-shadow;
 
         transform: scale($scale-value);
     }
