--- a/src/components/User/User.module.scss
+++ b/src/components/User/User.module.scss
@@ -1,21 +1,16 @@
 @import '../../assets/styles/variables.scss';
 
-.person {
-    width: calc((100% - 6 * 30px) / 6);
-    margin: 15px;
+.user {
     padding: 5px;
 
     color: #ffffff;
 
     border-radius: $border-radius;
-
-    overflow: hidden;
     transition: transform $transition-duration $timing-function;
 
-    &__link {
-        color: inherit;
-
-        text-decoration: none;
+    &:hover {
+        transform: scale($scale-value);
+        cursor: pointer;
     }
 
     &__photo {
@@ -38,13 +33,6 @@
     }
     &__birthday {
         margin-bottom: 5px;
-    }
-    &__gender {
-    }
-
-    &:hover {
-        transform: scale($scale-value);
-        cursor: pointer;
     }
 }
 
