--- a/src/components/UserList/UserList.module.scss
+++ b/src/components/UserList/UserList.module.scss
@@ -1,10 +1,20 @@
 @import '../../assets/styles/variables.scss';
 
-.usersList {
+.userList {
     display: flex;
     flex-wrap: wrap;
     margin: -15px;
 
     background-color: #ffffff;
     border-radius: $border-radius;
+
+    &__user {
+        width: calc((100% - 6 * 30px) / 6);
+        margin: 15px;
+    }
+
+    &__link {
+        color: inherit;
+        text-decoration: none;
+    }
 }
