--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -41,3 +41,8 @@ ul {
     border: 1px solid $active-link-color;
     border-radius: $border-radius;
 }
+
+.link {
+    color: inherit;
+    text-decoration: none;
+}
