--- a/src/components/UserList/UserList.module.scss
+++ b/src/components/UserList/UserList.module.scss
@@ -1,5 +1,40 @@
 @import '../../assets/styles/variables.scss';
 
+.usersWrap {
+    position: relative;
+    margin-bottom: 60px;
+
+    &__btnUp {
+        position: sticky;
+        bottom: 50px;
+
+        display: block;
+        width: 60px;
+        height: 60px;
+        margin-left: auto;
+        margin-right: -125px;
+
+        font-size: 30px;
+        color: $active-link-color;
+
+        background-color: #ffffff;
+        border: 1px solid $active-link-color;
+        border-radius: 50%;
+
+        transition: color $transition-duration $timing-function,
+            background-color $transition-duration $timing-function,
+            border-color $transition-duration $timing-function;
+
+        cursor: pointer;
+
+        &:hover {
+            color: #ffffff;
+            background-color: $active-link-color;
+            border-color: #ffffff;
+        }
+    }
+}
+
 .userList {
     display: flex;
     flex-wrap: wrap;
@@ -11,10 +46,5 @@
     &__user {
         width: calc((100% - 6 * 30px) / 6);
         margin: 15px;
-    }
-
-    &__link {
-        color: inherit;
-        text-decoration: none;
     }
 }
